[gd_scene load_steps=2 format=3 uid="uid://b7hkc1ky5qh0m"]

[ext_resource type="Script" path="res://scenes/glyph.gd" id="1_2hk8m"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_2hk8m")

[node name="Button1" type="Button" parent="."]
offset_left = 75.0
offset_right = 93.0
offset_bottom = 31.0
text = "1"

[node name="Button2" type="Button" parent="."]
offset_left = 249.0
offset_right = 267.0
offset_bottom = 31.0
text = "2"

[node name="Button3" type="Button" parent="."]
offset_left = 326.0
offset_top = 155.0
offset_right = 344.0
offset_bottom = 186.0
text = "3"

[node name="Button4" type="Button" parent="."]
offset_left = 167.0
offset_top = 281.0
offset_right = 185.0
offset_bottom = 312.0
text = "4"

[node name="Button5" type="Button" parent="."]
offset_top = 155.0
offset_right = 18.0
offset_bottom = 186.0
text = "5"

[node name="Create" type="Button" parent="."]
offset_left = 116.0
offset_top = 113.0
offset_right = 230.0
offset_bottom = 172.0
text = "Create"

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Create" to="." method="_on_create_pressed"]
